report: Update project report

--- a/_report/Assignment01-VirtualisingSoftwareReport.tex
+++ b/_report/Assignment01-VirtualisingSoftwareReport.tex
@@ -166,9 +166,12 @@ This project was developed by James Robiony-Rogers and Corban Surtees for COSC34
     \item Database: Supabase \url{https://supabase.io/}
 \end{itemize}
 
-The project is available on GitHub at:
+\section{Project Links}
+Below are links to the project demo video and the GitHub repository:
 
-\url{https://github.com/JamesRobionyRogers/Assignment01-VirtualisingSoftware/}.
-
+\begin{itemize}
+    \item Repository: \url{https://github.com/JamesRobionyRogers/Assignment01-VirtualisingSoftware/}
+    \item Project demo video: \url{https://youtu.be/ISDUj34Jlh0}
+\end{itemize}
 
 \end{document}
